# test1

./: README.md
Assignment_1_day1/Part_3/: Part_3  Part_3.cpp
Mini_Project/: CMakeLists.txt  Mini_Project  Mini_Project.cpp  main.cpp
Mini_Project/include/: Books.hpp  Shop.hpp
Mini_Project/src/: PrintMenu.cpp  ReadMenuInput.cpp
Week_1/Assignment_1_day1/Part_1/: Part_1  Part_1.cpp
Week_1/Assignment_1_day1/Part_2/: Part_2  Part_2.cpp
Week_1/Assignment_1_day1/Part_3/: Part_3
Week_1/Assignment_1_day2and3/: Assignment_1_day2and3  Assignment_1_day2and3.cpp
Week_2/Assignment_1/: Assignment_1  Assignment_1.cpp  Assignment_Day1
Week_2/Assignment_1_Week2Day2and3/: Assignment_1
Week_2/Assignment_Day10/: Assignment1  Assignment1.cpp
Week_2/Assignment_Week2Day2and3/: Assignment_1.cpp
Week_3/Day3_Assignment2/: Day3_Assignment2  Day3_Assignment2.cpp
Week_3/Day3_Assignment_3/: Day3_Assignment_3  Day3_Assignment_3.cpp
Week_3/EC++_Assignment_1/: EC++_Assignment_1  EC++_Assignment_1.cpp
Week_3/EC++_Assignment_2/: EC++_Assignment_2  EC++_Assignment_2.cpp
Week_3/Template Assignment/: Template_Assignment  Template_Assignment.cpp
